--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.1",
   "main": "./index",
   "dependencies": {
-    "express": "3.5.1",
+    "express": ">=3.11.0",
     "underscore": "*",
     "doctrine": "*",
     "js-yaml": "~3.13.1",
